<resources>
    <string name="app_name">WeatherAppProject</string>
    <string name="action_settings">Settings</string>
    <string name="downloading_info">Downloading information..</string>
    <string name="city_country">city,country</string>
    <string name="display_weather">Display weather</string>
    <string name="icon">Icon</string>
    <string name="action_search">Search</string>
    <string name="no_city_entered">No city has been entered.</string>
    <string name="inv_city_entered">Invalid city entered.</string>
    <string name="connection_timeout">Connection Timeout.</string>
    <string name="fahrenheit">Fahr</string>
    <string name="celsius">Cel</string>
</resources>
